--- a/InstagramClone_mine/Screens/AddScreenVC.xib
+++ b/InstagramClone_mine/Screens/AddScreenVC.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,18 +25,32 @@
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="rKb-D0-y0Y">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="852"/>
                     <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDh-qO-WZ9" userLabel="Close button">
+                            <rect key="frame" x="8" y="52" width="398" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="30" id="F3U-Dr-daP"/>
+                                <constraint firstAttribute="height" constant="30" id="iPl-ez-gBU"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                            <state key="normal">
+                                <imageReference key="image" image="xmark" catalog="system" symbolScale="large"/>
+                            </state>
+                            <connections>
+                                <action selector="closeButtonTapped:" destination="-1" eventType="touchUpInside" id="UBe-Qp-jow"/>
+                            </connections>
+                        </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C66-xx-0dx">
-                            <rect key="frame" x="8" y="52" width="398" height="652"/>
+                            <rect key="frame" x="8" y="82" width="398" height="602"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ke-2e-VxV">
-                                    <rect key="frame" x="162" y="311" width="74" height="30"/>
+                                    <rect key="frame" x="162" y="286" width="74" height="30"/>
                                     <state key="normal" title="Add Image"/>
                                     <connections>
                                         <action selector="imageTapped:" destination="-1" eventType="touchUpInside" id="Csv-s4-g2X"/>
                                     </connections>
                                 </button>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BoO-Pi-ELp">
-                                    <rect key="frame" x="0.0" y="20" width="398" height="612"/>
+                                    <rect key="frame" x="0.0" y="20" width="398" height="562"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -53,7 +68,7 @@
                             </connections>
                         </view>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Please enter text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="k75-hL-zRc">
-                            <rect key="frame" x="8" y="704" width="398" height="70"/>
+                            <rect key="frame" x="8" y="684" width="398" height="70"/>
                             <color key="backgroundColor" systemColor="systemGray5Color"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="70" id="iOL-Km-d4a"/>
@@ -66,7 +81,7 @@
                             </connections>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ree-ax-P4y">
-                            <rect key="frame" x="8" y="774" width="398" height="70"/>
+                            <rect key="frame" x="8" y="754" width="398" height="90"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <inset key="contentEdgeInsets" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
                             <state key="normal" title="Post"/>
@@ -90,7 +105,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="rKb-D0-y0Y" secondAttribute="trailing" id="n4Y-ai-N2p"/>
                 <constraint firstItem="rKb-D0-y0Y" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="sRB-vJ-kxC"/>
             </constraints>
-            <point key="canvasLocation" x="140.57971014492756" y="103.79464285714285"/>
+            <point key="canvasLocation" x="148" y="133"/>
         </view>
         <tapGestureRecognizer id="hCL-vt-PP5">
             <connections>
@@ -99,6 +114,7 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
+        <image name="xmark" catalog="system" width="128" height="113"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
