--- a/InstagramClone_mine/Screens/DetailScreenVC.xib
+++ b/InstagramClone_mine/Screens/DetailScreenVC.xib
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,10 +11,10 @@
             <connections>
                 <outlet property="commentsTableView" destination="uDz-6N-OQG" id="8dS-vI-OmX"/>
                 <outlet property="coommentsTableViewHeightConstraint" destination="SRk-8X-Uh6" id="bMN-vs-SGf"/>
-                <outlet property="descriptionHeight" destination="sSK-YA-4Nc" id="oR9-K4-umx"/>
-                <outlet property="imageView" destination="g5I-Dy-td4" id="bTB-sE-pFw"/>
+                <outlet property="descriptionHeightConstraint" destination="sSK-YA-4Nc" id="oR9-K4-umx"/>
                 <outlet property="newCommentTextView" destination="5hH-at-cYm" id="1x3-tb-QfT"/>
-                <outlet property="textView" destination="KBn-cP-SkD" id="ZiF-4h-FbY"/>
+                <outlet property="postScreenImageView" destination="g5I-Dy-td4" id="bTB-sE-pFw"/>
+                <outlet property="postScrenDescriptionLabel" destination="KBn-cP-SkD" id="ZiF-4h-FbY"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
