--- a/InstagramClone_mine/Screens/DetailScreenVC.xib
+++ b/InstagramClone_mine/Screens/DetailScreenVC.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -23,14 +23,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="1019"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvv-xV-W70">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="1019"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ZVP-zE-yQH">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="900"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="950"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g5I-Dy-td4">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
@@ -38,8 +38,26 @@
                                         <constraint firstAttribute="width" secondItem="g5I-Dy-td4" secondAttribute="height" multiplier="1:1" id="sy4-iH-Ppu"/>
                                     </constraints>
                                 </imageView>
+                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jyQ-VM-sFR">
+                                    <rect key="frame" x="4" y="414" width="406" height="50"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OdV-4T-x1b" userLabel="Share button">
+                                            <rect key="frame" x="0.0" y="0.0" width="20" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                            <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
+                                            <state key="normal" image="arrow.turn.up.right" catalog="system"/>
+                                            <connections>
+                                                <action selector="shareButtonTapped:" destination="-1" eventType="touchUpInside" id="1ys-28-MAp"/>
+                                            </connections>
+                                        </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qmc-M8-DJL">
+                                            <rect key="frame" x="20" y="0.0" width="386" height="50"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        </view>
+                                    </subviews>
+                                </stackView>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" bouncesZoom="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBn-cP-SkD" userLabel="Description TextView">
-                                    <rect key="frame" x="0.0" y="414" width="414" height="100"/>
+                                    <rect key="frame" x="0.0" y="464" width="414" height="100"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="100" id="sSK-YA-4Nc"/>
@@ -50,7 +68,7 @@
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="409" placeholderIntrinsicHeight="270" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uDz-6N-OQG" userLabel="Comments Table View" customClass="SelfSizedTableView" customModule="InstagramClone_mine" customModuleProvider="target">
-                                    <rect key="frame" x="2.5" y="514" width="409" height="270"/>
+                                    <rect key="frame" x="2.5" y="564" width="409" height="270"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="270" id="SRk-8X-Uh6"/>
@@ -60,7 +78,7 @@
                                     </connections>
                                 </tableView>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0SR-i0-KgE" userLabel="New Comment Stack">
-                                    <rect key="frame" x="8.5" y="784" width="397" height="116"/>
+                                    <rect key="frame" x="8.5" y="834" width="397" height="116"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5hH-at-cYm">
                                             <rect key="frame" x="8" y="8" width="331" height="100"/>
@@ -88,18 +106,15 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="UEH-ZE-6am" firstAttribute="leading" secondItem="5hH-at-cYm" secondAttribute="trailing" id="5SP-OE-Cyv"/>
-                                        <constraint firstItem="5hH-at-cYm" firstAttribute="leading" secondItem="0SR-i0-KgE" secondAttribute="leading" id="Az6-AW-e1F"/>
-                                        <constraint firstAttribute="trailing" secondItem="UEH-ZE-6am" secondAttribute="trailing" id="RwJ-fq-18I"/>
                                         <constraint firstItem="UEH-ZE-6am" firstAttribute="height" secondItem="5hH-at-cYm" secondAttribute="height" multiplier="0.3" id="dck-lA-zgd"/>
-                                        <constraint firstItem="5hH-at-cYm" firstAttribute="top" secondItem="0SR-i0-KgE" secondAttribute="top" id="oib-9E-Nr4"/>
                                     </constraints>
                                     <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                                 </stackView>
                             </subviews>
                             <constraints>
                                 <constraint firstItem="g5I-Dy-td4" firstAttribute="width" secondItem="ZVP-zE-yQH" secondAttribute="width" id="67P-zd-Wxm"/>
+                                <constraint firstItem="KBn-cP-SkD" firstAttribute="width" secondItem="ZVP-zE-yQH" secondAttribute="width" id="S0A-Nt-Xbf"/>
                                 <constraint firstItem="KBn-cP-SkD" firstAttribute="width" secondItem="ZVP-zE-yQH" secondAttribute="width" id="Wcq-sK-6Zu"/>
-                                <constraint firstItem="uDz-6N-OQG" firstAttribute="top" secondItem="KBn-cP-SkD" secondAttribute="bottom" constant="40" id="y1F-wJ-cvz"/>
                             </constraints>
                         </stackView>
                     </subviews>
@@ -107,6 +122,7 @@
                         <constraint firstItem="0SR-i0-KgE" firstAttribute="width" secondItem="GaR-TA-yKK" secondAttribute="width" multiplier="0.958937" id="N6V-zw-qij"/>
                         <constraint firstItem="ZVP-zE-yQH" firstAttribute="leading" secondItem="GaR-TA-yKK" secondAttribute="leading" id="QA4-pw-X8b"/>
                         <constraint firstItem="ZVP-zE-yQH" firstAttribute="trailing" secondItem="GaR-TA-yKK" secondAttribute="trailing" id="UQm-en-xmG"/>
+                        <constraint firstItem="jyQ-VM-sFR" firstAttribute="width" secondItem="GaR-TA-yKK" secondAttribute="width" multiplier="0.980676" id="euc-j3-gTO"/>
                         <constraint firstItem="ZVP-zE-yQH" firstAttribute="bottom" secondItem="GaR-TA-yKK" secondAttribute="bottom" id="kNq-CL-6CN"/>
                         <constraint firstItem="ZVP-zE-yQH" firstAttribute="width" secondItem="l1E-6g-oKq" secondAttribute="width" id="rR0-ks-5bB"/>
                         <constraint firstItem="ZVP-zE-yQH" firstAttribute="top" secondItem="GaR-TA-yKK" secondAttribute="top" id="tuu-xk-Y0D"/>
@@ -123,10 +139,12 @@
                 <constraint firstAttribute="bottom" secondItem="qvv-xV-W70" secondAttribute="bottom" id="N9E-bH-aKT"/>
                 <constraint firstItem="qvv-xV-W70" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="NkZ-8Q-m3T"/>
             </constraints>
-            <point key="canvasLocation" x="147.82608695652175" y="172.76785714285714"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-8.6956521739130448" y="221.98660714285714"/>
         </view>
     </objects>
     <resources>
+        <image name="arrow.turn.up.right" catalog="system" width="128" height="99"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
